# WebAI-to-API-master

./: .env.cookies.template  .env.example  .gitignore  AGENTS.md  Changelog.md  Dockerfile  GEMINI_SETUP.md  GITHUB_PUSH.md  QUICKSTART.md  README.md  REDIS.md  SECURITY.md  TESTING.md  disable_auth.py  extract_cookies.py  final_fix_webai.py  fix_auth_safe.py  force_webai_mode.py  pyproject.toml  restart_server.bat  start_server.py  ultimate_fix.py  update_github_info.py  verify_cookie_mode.py
.github/workflows/: ci.yml
src/: run.py
src/app/: config.py  main.py
src/app/endpoints/: agents.py  chat.py  health.py
src/app/middleware/: __init__.py  auth.py  rate_limit.py
src/app/services/: cookie_manager.py  gemini_client.py
src/app/utils/: tokens.py
tests/: __init__.py  conftest.py  test_config.py
tests/test_endpoints/: __init__.py  test_health.py
tests/test_middleware/: __init__.py  test_auth.py  test_rate_limit.py
